# fixed_width_integers

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  README.md
.github/workflows/: ubuntu.yml  windows.yml
docs/: CMakeLists.txt  mainpage.md
include/fixed_width_integers/: fixed_width_integers.hpp
test/: CMakeLists.txt  fixed_width_integers_test.cpp
